<resources>
    <string name="app_name">AmbiNet Vortex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="error_loading">Loading error, please try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">Nothing\'s here :)</string>
    <string name="new_messages">New messages</string>
    <string name="posts_author_avatar">Avatar</string>
    <string name="post_more_menu">More</string>
    <string name="video_preview">Video preview</string>
    <string name="video_preview_button">Video preview button</string>
    <string name="like_button">Like</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="later">Later</string>
    <string name="login_label">Login</string>
    <string name="password_label">Password</string>
    <string name="submit_button_text">Submit</string>
    <string name="check_login_password_message">Check login and password!</string>
    <string name="check_internet_connection_text">Check internet connection!</string>
    <string name="unknown_error_text">Unknown error!</string>
    <string name="ok_button_text">OK</string>
    <string name="login_to_like_message">Please login to like!</string>
    <string name="you_cant_like_own_posts_message">You can\\\'t like your own posts!</string>
    <string name="repeat">Repeat</string>
    <string name="channel_remote_name">Messages</string>
    <string name="channel_remote_description">Channel for messages</string>
    <string name="notification_user_liked">%1$s published new post:</string>
    <string name="message_text_hint">Message text</string>
    <string name="attachment_image_preview">Attachment preview</string>
    <string name="clear_button">Clear</string>
    <string name="take_image_from_gallery">Take image from gallery button</string>
    <string name="take_photo_button">Take photo button</string>
    <string name="label_new_post_title">New post</string>
    <string name="label_post_edit_title">Post editing</string>
    <string name="attachment_image">Attachment image</string>
    <string name="post_details_title">Details</string>
    <string name="attachment_image_preview_title">Image</string>
    <string name="SNACKBAR_ERROR">Something went wrong, try again later</string>
    <string name="write_new_post_button_text">Write new post</string>
    <string name="please_login_to_write_posts_message">Please login to write posts!</string>
    <string name="authorization_text">Authorization</string>
</resources>