<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainPosts"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/posts" />

    <item
        android:id="@+id/eventsFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_event_24"
        android:title="@string/events" />

    <item
        android:id="@+id/usersFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_groups_24"
        android:title="@string/users" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
</menu>