<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="post"
            type="com.xabbok.ambinetvortex.dto.Post" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/mainScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message_text_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:minLines="10"
                        android:scrollbars="vertical"
                        android:text="@={post.content}"
                        app:placeholderText="123123"
                        tools:text="@tools:sample/lorem[15]" />
                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:id="@+id/preview_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="12">

                        <ImageView
                            android:id="@+id/preview"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/attachment_image_preview"
                            android:padding="8dp"
                            tools:srcCompat="@tools:sample/avatars" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginBottom="8dp"
                        android:text="@string/clear_button" />

                </FrameLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gallery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/take_image_from_gallery"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_image_24"
                app:tint="?colorButtonNormal" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/take_photo_button"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_photo_camera_24"
                app:tint="?colorButtonNormal" />
        </LinearLayout>
    </LinearLayout>
</layout>