<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.xabbok.ambinetvortex.presentation.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/actionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:title="@string/authorization_text"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/mainScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions"
                        android:minLines="10"
                        android:scrollbars="vertical"
                        android:text="@={viewModel.creds.login}"
                        app:placeholderText="Enter login"
                        tools:text="student" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:minLines="10"
                        android:scrollbars="vertical"
                        android:text="@={viewModel.creds.password}"
                        app:placeholderText="Enter password"
                        tools:text="12345" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/snackBarCoordinator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text" />
    </LinearLayout>
</layout>