<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.fragments.PostsFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:contentDescription="@string/posts_author_avatar"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintBottom_toTopOf="@id/barrierTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar"
        app:shapeAppearanceOverlay="@style/AvatarImageView.Corner"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/posts_margins"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/more"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/posts_margins"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/more"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/post_more_menu"
        android:padding="@dimen/posts_margins"
        app:layout_constraintBottom_toBottomOf="@id/published"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/author"
        app:layout_constraintTop_toTopOf="@id/author" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,more" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/posts_margins"
        android:layout_marginBottom="@dimen/posts_margins"
        android:autoLink="all"
        android:ellipsize="end"
        android:maxLines="@integer/post_max_lines"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@id/videoPreview"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        tools:text="@sample/posts.json/data/content" />

    <ImageView
        android:id="@+id/videoPreview"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:contentDescription="@string/video_preview"
        android:src="@drawable/illustration_image"
        app:layout_constraintBottom_toTopOf="@+id/barrierAfterContent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <ImageView
        android:id="@+id/videoPreviewButton"
        android:layout_width="299dp"
        android:layout_height="182dp"
        android:contentDescription="@string/video_preview_button"
        android:src="@drawable/ic_baseline_play_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="@id/videoPreview"
        app:layout_constraintEnd_toEndOf="@id/videoPreview"
        app:layout_constraintStart_toStartOf="@id/videoPreview"
        app:layout_constraintTop_toTopOf="@id/videoPreview"
        app:tint="@color/design_default_color_primary" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/postVideoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="videoPreview, videoPreviewButton" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierAfterContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="videoPreview" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:id="@+id/attachmentImage"
        tools:srcCompat="@sample/posts.json/data/authorAvatar"
        app:layout_constraintTop_toBottomOf="@id/barrierAfterContent"
        app:layout_constraintBottom_toTopOf="@+id/barrierAfterAttachments"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierAfterAttachments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="attachmentImage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/heart_icon"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/posts_margin_between_buttons"
        android:checkable="true"
        android:contentDescription="@string/like_button"
        app:layout_constraintBottom_toBottomOf="@id/barrierAfterButtons"
        app:layout_constraintTop_toBottomOf="@id/barrierAfterAttachments"
        tools:checked="@sample/posts.json/data/likedByMe"
        tools:text="@sample/posts.json/data/likes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_button"
        style="@style/Widget.AppTheme.ShareCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/posts_margins"
        android:contentDescription="@string/share"

        app:layout_constraintBottom_toBottomOf="@id/barrierAfterButtons"
        app:layout_constraintStart_toEndOf="@id/heart_icon"
        app:layout_constraintTop_toTopOf="@id/barrierAfterAttachments"
        tools:text="@sample/posts.json/data/shares" />


    <ImageButton
        android:id="@+id/views_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/posts_margin_between_buttons"
        android:background="@android:color/transparent"
        android:contentDescription="@string/views"
        android:src="@drawable/ic_baseline_eye_24"
        app:layout_constraintBottom_toBottomOf="@id/barrierAfterButtons"
        app:layout_constraintEnd_toStartOf="@id/views"
        app:layout_constraintTop_toTopOf="@id/barrierAfterAttachments" />

    <TextView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/posts_margin_between_buttons"
        app:layout_constraintBottom_toBottomOf="@id/barrierAfterButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierAfterAttachments"
        tools:text="@sample/posts.json/data/views" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierAfterButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="heart_icon,share_button" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/horizontal_divider_padding"
        android:paddingVertical="@dimen/vertical_divider_padding"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_bright"
        app:layout_constraintTop_toTopOf="@id/barrierAfterButtons"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>